<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2B2B">

    <TextView
        android:id="@+id/Text_MUSIC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        style="@style/AppTextStyle"
        android:text="@string/music"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_Music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Button_Music"
        android:contentDescription="@string/music_button_description"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginTop="288dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/audiowide"
        android:textSize="36sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_Locale"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/audiowide"
        android:text="@string/ru_en"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_Music" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_Back_Settings"
        android:layout_width="244dp"
        android:layout_height="86dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_background"
        style="@style/AppTextStyle"
        android:text="@string/back"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
